<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_light"
    tools:context=".ui.FinishFragment">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_time"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/timer"
        android:background="@drawable/card_background"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        style="@style/LineStyle"
        android:layout_marginTop="110dp">

        <Button
            android:id="@+id/restartButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/restart"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/accent"/>

        <Button
            android:id="@+id/homeButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/home"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/accent"/>

    </LinearLayout>


</LinearLayout>